--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <script>
-        fetch('http://127.0.0.1:8000/News', { mode: 'no-cors' })
+        fetch('http://127.0.0.1:8000/News')
             .then((response) => response.json())
             .then((data) => {
 
