--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             .then((data) => {
 
             console.log(data);
+            console.log(data.length);
             const news_data = ["【重要】新曲リリース＆生放送決定！",
                             "ライブイベント開催のお知らせ",
                             "新アルバム『夢幻の旅』発売決定！",
@@ -45,8 +46,6 @@
             const kobanzame = PIXI.Texture.from('./fish_same_kobanzame.png');
             const sacabam = PIXI.Texture.from('./kodai_sacabambaspis.png');
             const mijinko = PIXI.Texture.from('./mushi_mijinko.png');
-
-            
 
             for (let i = 0; i < data.length; i++) {
                 let texture = null;
