--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             .then((data) => {
 
             console.log(data);
-            console.log(data.length);
+            console.log(data[1]["Title"]);
             const news_data = ["【重要】新曲リリース＆生放送決定！",
                             "ライブイベント開催のお知らせ",
                             "新アルバム『夢幻の旅』発売決定！",
