--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
         fetch('http://192.168.64.2:8000/News')
             .then((response) => response.json())
             .then((data) => {
-
-            console.log(data);
-            console.log(data[1]["Title"]);
+                
             const news_data = ["【重要】新曲リリース＆生放送決定！",
                             "ライブイベント開催のお知らせ",
                             "新アルバム『夢幻の旅』発売決定！",
@@ -65,6 +63,7 @@
                     0.5,
                     texture,
                 );
+                console.log(texture);
             }
 
             function createFish(x, y, name,url, scale, texture) {
