--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     data[1]["Title"],
                     data[1]["URL"],
                     0.5,
-                    texture,
+                    kujira,
             )
 
             function createFish(x, y, name, url, scale, texture) {
