--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 } else if (data[i]["level"] == 1) {
                     texture = kobanzame;
                     size = 0.6;
-                } else if (data[i]["level"] == 2) {
+                } else if (data[i]["level"] == 2 || data[i]["level"] == 3) {
                     texture = sacabam;
                     size = 0.4;
                 } else {
