--- a/index.html
+++ b/index.html
@@ -80,19 +80,20 @@
             const mijinko = PIXI.Texture.from('./images/mushi_mijinko.png');
             const maguro = PIXI.Texture.from('./images/fish_maguro.png');
 
-            const preData = {};
+            var preData = {};
             try{
                 preData = getCookie();
             } catch(e){
                 console.log(e.toString());
             }
-            setCookie('user', json);
             for (let i = 0; i < data.length; i++) { //受け取ったデータでスプライトを作成
                 let texture = null;
                 let size = 0.5;
                 let update = false;
-                if(data[i]["level"].toString() != preData[i]["level"].toString()) {
-                    update = true;
+                if (Object.keys(preData).length !== 0) {
+                    if(data[i]["level"].toString() != preData['user'][i]["level"].toString()) {
+                        update = true;
+                    }
                 }
                 if (data[i]["level"] == 1) {  //レベルに合わせて割り当てる画像を決める
                     texture = kujira;
@@ -110,6 +111,7 @@
                     texture = mijinko;
                     size = 0.2;
                 }
+                setCookie('user', data);
                 createFish( //魚を作成する関数を呼び出し
                     Math.floor(Math.random() * app.screen.width), //場所はランダム
                     Math.floor(Math.random() * app.screen.height),
