--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         }
         let uid = {"UID" : user} // jsonに整形
         
-        const app = new PIXI.Application({ background: '#1099bb', resizeTo: window });  //pixi.jsのウィンドウ生成
+        const app = new PIXI.Application({ background: '#afddfa', resizeTo: window });  //pixi.jsのウィンドウ生成
         document.body.appendChild(app.view); //ウィンドウを貼り付け(canvas)
 
         console.log(uid);
