--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 //fish.alpha = (Math.sin(10 * fish.x / app.screen.width / Math.PI) + Math.sin(10 * fish.y / app.screen.height / Math.PI)) / 2;
                 fish.alpha = 1;
                 fish.text.x = x;
-                fish.text.y = y + 1;
+                fish.text.y = y - 2;
                 fish.name = name;
                 fish.url = url;
                 fish.hash = hash;
